fix: summary stats table Timeout values alignment

--- a/frontend/src/pages/make/quiz-stats/quiz-stats-component.scss
+++ b/frontend/src/pages/make/quiz-stats/quiz-stats-component.scss
@@ -62,6 +62,11 @@
         width: 33.33%;
     }
 
+    table[data-testid='summary-stats-table'] td:last-child {
+        text-align: left;
+        font-weight: inherit;
+    }
+
     table[data-testid='attempt-stats-table'] th:first-child,
     table[data-testid='attempt-stats-table'] td:first-child {
         width: 70%;
